/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.8/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    alias(libs.plugins.application)
    // Apply the Java plugin to add support for building Java applications.
    alias(libs.plugins.java)
    // Apply the JavaFX plugin to add support for building JavaFX applications.
    alias(libs.plugins.javafxplugin)
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    // Use JUnit Jupiter for testing.
    testImplementation libs.junit.junit4  // JUnit 4 Engine to run JUnit 4 tests   
    testImplementation libs.junit.jupiter // JUnit Jupiter Engine TO run JUnit 5 tests    
    testImplementation libs.junit.vintage // JUnit Vintage Engine to run JUnit 4 tests with JUnit 5
    
    // This dependency is used by the application.
    implementation libs.guava        // Google Guava library for Java 8+ 
    implementation libs.commonsLang3 // Apache Commons Lang 3 library for Java 8+ 

    // JavaFX dependencies
    implementation libs.javafx.controls  // javafx controls
    implementation libs.javafx.fxml      // javafx controls    
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

application {
    // Define the main class for the application.
    mainClass = 'gradlewithjavafx.HelloApplication'
}

tasks.named('test') {
    // Use JUnit Platform for unit tests.
    useJUnitPlatform()
}

// JavaFX plugin configuration
javafx 
{
    version = "23"
    modules = [ 'javafx.controls', 'javafx.fxml' ] 
}

// JavaFX SDK path
def javafxSdkPath = System.getenv("PATH_TO_FX") ?: "C:\\Program Files\\Java\\javafx_23\\lib" // Path to JavaFX SDK

// Run task configuration
tasks.named('run') 
{
    doFirst 
    {
        jvmArgs = [
                    "--module-path", javafxSdkPath, // "--module-path", "C:\\Program Files\\Java\\javafx_23\\lib",            
                    "--add-modules", "javafx.controls,javafx.fxml"
                  ]
    }
}

